<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/update_info"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintEnd_toStartOf="@id/filter"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back" />

        <ImageView
            android:id="@+id/filter"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        android:background="@color/colorItemBackground"
        app:layout_constraintTop_toBottomOf="@id/bar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:paddingHorizontal="@dimen/space"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_name"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="@dimen/space"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/e_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space"
            android:layout_marginTop="@dimen/space"
            android:layout_marginEnd="@dimen/space_small"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@id/tele_chat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconDrawable="@drawable/ic_e_code"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_code_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_e_code"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tele_chat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/space"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/e_code"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconDrawable="@drawable/ic_telegram"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tele_chat_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_telegram"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/e_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:background="@color/colorItemBackground"
        android:padding="@dimen/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_fields">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="@dimen/progress_size"
            android:layout_height="@dimen/progress_size"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_result"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            app:layout_constraintBottom_toBottomOf="@id/progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/progress" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/texts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/preview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logTitle"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:text="@string/log"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_result" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log"
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:background="@color/colorBackground"
            android:padding="@dimen/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>