<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/space">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space"
        android:layout_marginTop="@dimen/space"
        android:background="@drawable/bg_item_checkin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:src="@drawable/ic_email"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/email_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space"
            android:paddingVertical="@dimen/space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/from"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space"
        android:layout_marginTop="@dimen/space"
        android:layout_marginEnd="@dimen/space_small"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@id/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:startIconDrawable="@drawable/ic_from_date"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/from_content"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hint_input_from_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginEnd="@dimen/space"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="@id/from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/from"
        app:layout_constraintTop_toTopOf="@id/from"
        app:startIconDrawable="@drawable/ic_to_date"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/to_content"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hint_input_to_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space"
        android:layout_marginTop="@dimen/space"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@id/check_option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from"
        app:startIconDrawable="@drawable/ic_e_code"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_content"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_e_code"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/check_option"
        style="@style/BaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:visibility="gone"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintTop_toTopOf="@id/code"
        app:layout_constraintBottom_toBottomOf="@id/code"/>

</androidx.constraintlayout.widget.ConstraintLayout>